Ads JDK15 formatted String using Text Block
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>